[package]
name = "x328-proto"
version = "0.1.0"
authors = ["Lukas Sandström <lukas.sandstrom@chalmers.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", default-features=false }
nom = { version = "6.1", default-features=false }
snafu = { version="0.6", default-features=false, features=["std"] }
